[package]
name = "stroke"
version = "0.1.0"
description = """A zero-allocation library providing const-generic 
                implementations of Bézier curves, B-Spline curves 
                and specialized implementations of up to cubic Bézier 
                curves in N-dimensional euclidean space. It is intended 
                for general/embedded/wasm use supporting #![no_std] 
                environments written in 100% safe Rust."""
authors = ["Dorian Prill"]
repository = "https://github.com/dorianprill/stroke"
readme = "README.md"
keywords = ["point", "bezier", "spline", "graphics", "path" ]
categories = ["no-std", "science", "graphics", "mathematics", "data-structures" ]
edition = "2021"
license = "MIT"


exclude = [
    "*.png",
    "examples/*",
    ".github/*",
    ".gitignore",
    ".vscode/*",
]

[dependencies]
tinyvec = { version = "^1.5", features = ["rustc_1_55"] }
nalgebra = "0.31.1"
smallvec = { version = "1.9.0", features = ["const_generics"] }


[dependencies.num-traits]
version = "^0.2"
default-features = false
features = ["libm"]    # <--- Uncomment if you wish to use `Float` and `Real` without `std`


# these are just for development (e.g. integration tests and examples)
[dev-dependencies]
plotters = "^0.3.0"
