[package]
name = "stroke"
version = "0.3.0"
description = """Zero-allocation, const-generic implementations of Bézier and B-Spline curves in N-dimensional euclidean space."""
authors = ["Dorian Prill"]
repository = "https://github.com/dorianprill/stroke"
readme = "README.md"
keywords = ["point", "bezier", "spline", "graphics", "path"]
categories = ["no-std", "science", "graphics", "mathematics", "data-structures"]
edition = "2024"
rust-version = "1.95"
license = "MIT"


include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "rust-toolchain",
    "src/**",
    "examples/**/*.rs",
]

[dependencies]
tinyvec = { version = "^1.10.0" } #{, features = ["rustc_1_55"] }
nalgebra = { version = "^0.34.1", default-features = false, features = [
    "libm",
], optional = true }


[dependencies.num-traits]
version = "^0.2"
default-features = false
features = ["libm"]      # use `Float` and `Real` without `std`

[features]
nalgebra = ["dep:nalgebra"]

# these are just for development (e.g. integration tests and examples)
[dev-dependencies]
plotters = "^0.3"

[[example]]
name = "plotters_cubic_bezier"
test = false
